<?xml version="1.0" encoding="UTF-8"?> <!-- 账户注册 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_accountregister_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_main"
    android:orientation="vertical" >

    <!-- 标题栏 -->

    <RelativeLayout
        android:id="@+id/layout_accountregister_title"
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_title"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_accountregister_back"
            android:layout_width="45dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:clickable="true"
            android:src="@drawable/btn_title_back_selector" />

        <TextView
            android:id="@+id/text_accountregister_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:singleLine="true"
            android:text="@string/register_title"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <!-- 登录按钮 -->

        <Button
            android:id="@+id/btn_accountregister_login"
            android:layout_width="60dip"
            android:layout_height="30dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:background="@drawable/btn_title_selector"
            android:gravity="center"
            android:paddingLeft="7dip"
            android:paddingRight="7dip"
            android:text="@string/register_login"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>
    <!-- 输入手机号，获取验证码，然后输入验证码，确定按钮 -->

    <LinearLayout
        android:id="@+id/layout_accountregitster_first"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_accountregister_title"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="15dip"
        android:orientation="vertical" >

        <!-- 输入电话号码 -->

        <RelativeLayout
            android:id="@+id/layout_accountregister_edittel"
            android:layout_width="fill_parent"
            android:layout_height="50dip" >

            <EditText
                android:id="@+id/edit_accountregister_tel"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/bg_edit_selector"
                android:gravity="center_vertical"
                android:hint="@string/register_inputnumber_hint"
                android:inputType="phone"
                android:maxLength="12"
                android:paddingLeft="30dip"
                android:paddingRight="10dip"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/img_accountregister_telic"
                android:layout_width="15dip"
                android:layout_height="15dip"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dip"
                android:src="@drawable/ic_edit_mobile" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_accountregister_getcode"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="3dip"
            android:layout_marginTop="15dip"
            android:background="@drawable/btn_register_selector"
            android:enabled="false"
            android:text="@string/register_getcode"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <!-- 获取code之后要显示的ui -->

        <RelativeLayout
            android:id="@+id/layout_accountregister_afterget"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_marginTop="15dip"
            android:visibility="gone" >

            <RelativeLayout
                android:id="@+id/layout_accountregister_afterget_edit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="40dip" >

                <!--
                   <ImageView
                    android:id="@+id/img_accountregister_codeic"
                    android:layout_width="15dip"
                    android:layout_height="15dip"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:src="@drawable/ic_launcher" /> 
                    android:layout_toRightOf="@id/img_accountregister_codeic"
                -->

                <EditText
                    android:id="@+id/edit_accountregister_code"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/bg_edit_selector"
                    android:gravity="center_vertical"
                    android:hint="@string/register_inputcode_hint"
                    android:inputType="number"
                    android:paddingLeft="10dip"
                    android:textSize="14sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_accountregister_codeok"
                android:layout_width="80dip"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:background="@drawable/btn_half_selector"
                android:gravity="center"
                android:paddingBottom="10dip"
                android:paddingTop="10dip"
                android:text="@string/ok_str"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

    <!-- 验证码正确后设置密码页 -->

    <LinearLayout
        android:id="@+id/layout_accountregitster_second"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_accountregister_title"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="15dip"
        android:orientation="vertical"
        android:visibility="gone" >

        <!-- 设置密码 -->

        <RelativeLayout
            android:id="@+id/layout_accountregister_editpwd"
            android:layout_width="fill_parent"
            android:layout_height="50dip" >

            <EditText
                android:id="@+id/edit_accountregister_pwd"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/bg_edit_selector"
                android:gravity="center_vertical"
                android:hint="@string/register_pwd_hint"
                android:maxLength="11"
                android:inputType="textPassword"
                android:paddingLeft="30dip"
                android:paddingRight="10dip"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/img_accountregister_pwdic"
                android:layout_width="15dip"
                android:layout_height="15dip"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dip"
                android:src="@drawable/ic_edit_pwd" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_accountregister_pwd_set"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="3dip"
            android:layout_marginTop="15dip"
            android:background="@drawable/btn_register_selector"
            android:text="@string/ok_str"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
    <!-- 其它注册方式 -->

    <LinearLayout
        android:id="@+id/layout_accountregister_others"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:orientation="horizontal" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:background="@drawable/bg_register_lineleft" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/register_other"
                android:textColor="@color/register_other_color"
                android:textSize="14sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:background="@drawable/bg_register_lineright" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/layout_accountregister_sina"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginLeft="10dip"
                android:layout_weight="1"
                android:background="@drawable/bg_layout_selector"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="30dip"
                    android:layout_height="30dip"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/logo_sinaweibo" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dip"
                    android:gravity="center_vertical"
                    android:text="@string/account_sinaweibo2"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_accountregister_qqweibo"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_weight="1"
                android:background="@drawable/bg_layout_selector"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="30dip"
                    android:layout_height="30dip"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/logo_qqweibo" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dip"
                    android:gravity="center_vertical"
                    android:text="@string/account_qqweibo2"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_accountregister_renren"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginRight="10dip"
                android:layout_weight="1"
                android:background="@drawable/bg_layout_selector"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="30dip"
                    android:layout_height="30dip"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/logo_renren" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dip"
                    android:gravity="center_vertical"
                    android:text="@string/account_renren2"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>