<?xml version="1.0" encoding="UTF-8"?> <!-- 账户登录 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_accountlogin_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_main"
    android:orientation="vertical" >

    <!-- 标题栏 -->

    <RelativeLayout
        android:id="@+id/layout_accountlogin_title"
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_title"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_accountlogin_back"
            android:layout_width="45dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:clickable="true"
            android:src="@drawable/btn_title_back_selector" />

        <TextView
            android:id="@+id/text_accountlogin_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:singleLine="true"
            android:text="@string/account_login"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_accountlogin_register"
            android:layout_width="60dip"
            android:layout_height="30dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:background="@drawable/btn_title_selector"
            android:paddingLeft="7dip"
            android:paddingRight="7dip"
            android:text="@string/register_title"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>
    <!-- 输入账户名 -->

    <RelativeLayout
        android:id="@+id/layout_accountlogin_editname"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_below="@id/layout_accountlogin_title"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="15dip" >

        <EditText
            android:id="@+id/edit_accountlogin_name"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/bg_edit_selector"
            android:gravity="center_vertical"
            android:hint="@string/login_name_hint"
            android:inputType="phone"
            android:paddingLeft="30dip"
            android:paddingRight="10dip"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/img_accountlogin_nameic"
            android:layout_width="15dip"
            android:layout_height="15dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:src="@drawable/ic_edit_mobile" />
    </RelativeLayout>

    <!-- 输入密码 -->

    <RelativeLayout
        android:id="@+id/layout_accountlogin_editpwd"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_below="@id/layout_accountlogin_editname"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="15dip" >

        <EditText
            android:id="@+id/edit_accountlogin_pwd"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/bg_edit_selector"
            android:gravity="center_vertical"
            android:hint="@string/login_pwd_hint"
            android:inputType="textPassword"
            android:paddingLeft="30dip"
            android:paddingRight="10dip"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="15dip"
            android:layout_height="15dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:src="@drawable/ic_edit_pwd" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_accountlogin_login"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_below="@id/layout_accountlogin_editpwd"
        android:layout_marginLeft="23dip"
        android:layout_marginRight="23dip"
        android:layout_marginTop="15dip"
        android:background="@drawable/btn_register_selector"
        android:text="@string/account_login"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <!-- 其它登录方式 -->

    <LinearLayout
        android:id="@+id/layout_accountlogin_others"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:orientation="horizontal" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:background="@drawable/bg_register_lineleft" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/login_other"
                android:textColor="@color/register_other_color"
                android:textSize="14sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:background="@drawable/bg_register_lineright" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/layout_accountlogin_sina"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_weight="1"
                android:background="@drawable/bg_layout_selector"
                android:clickable="true"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="30dip"
                    android:layout_height="30dip"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/logo_sinaweibo" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dip"
                    android:gravity="center_vertical"
                    android:text="@string/account_sinaweibo2"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_accountlogin_qqweibo"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_weight="1"
                android:background="@drawable/bg_layout_selector"
                android:clickable="true"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="30dip"
                    android:layout_height="30dip"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/logo_qqweibo" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dip"
                    android:gravity="center_vertical"
                    android:text="@string/account_qqweibo2"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_accountlogin_renren"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_weight="1"
                android:background="@drawable/bg_layout_selector"
                android:clickable="true"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="30dip"
                    android:layout_height="30dip"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/logo_renren" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dip"
                    android:gravity="center_vertical"
                    android:text="@string/account_renren2"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>